# JamesM-GPR-460-01

JameEngine/: JameEngine.sln
JameEngine/JameEngine/: JameEngine.vcxproj  JameEngine.vcxproj.filters  JamesEngine.vcxproj  JamesEngine.vcxproj.filters  Resource.h  StackAllocator.cpp  collidercolorchanger.cpp  collidercolorchanger.h  component.h  componentpool.cpp  componentpool.h  gameobject.cpp  gameobject.h  level.cpp  level.h  level0.txt  main.cpp  playercontroller.cpp  playercontroller.h  rectanglecollider.cpp  rectanglecollider.h  rectanglerenderer.cpp  rectanglerenderer.h  scene.cpp  scene.h  transform.h  utils.h
JameEngineC/: CMakeLists.txt
JameEngineC++/JameEngine/: JamesEngine.cpp  JamesEngine.rc  JamesEngine.vcxproj  JamesEngine.vcxproj.filters  StackAllocator.h  collidercolorchanger.cpp  collidercolorchanger.h  component.h  componentpool.h  gameobject.cpp  gameobject.h  level.cpp  level.h  main.cpp  playercontroller.cpp  playercontroller.h  rectanglecollider.cpp  rectanglecollider.h  rectanglerenderer.cpp  rectanglerenderer.h  scene.cpp  scene.h  stage.cpp  stage.h  trianglerenderer.cpp  trianglerenderer.h  utils.h
JameEngineC++/JameEngine/levels/: level0.txt
JameEngineC++/TrianglesDLL/: TrianglesDLL.sln
JameEngineC++/TrianglesDLL/TrianglesDLL/: TrianglesDLL.vcxproj  TrianglesDLL.vcxproj.filters  (+2 more)
JameEngineC/source/: gameobject.h  main.c  rectanglecollider.c  rectanglecollider.h  rectanglerenderer.c  rectanglerenderer.h  scene.h  utils.h
James GPR-460-01/: James GPR-460-01.sln
James GPR-460-01/James GPR-460-01/: James GPR-460-01.vcxproj  main.cpp
(+11 files in other folders)
